# basic-antlr4

./: README.md  input.txt  pyproject.toml
